--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
         series.name = "Sales";
         series.strokeWidth = 3;
 
+        /* Add legend */
+        //chart.legend = new am4charts.Legend();
+
     }); // end am4core.ready()
 </script>
 
@@ -66,6 +69,7 @@
 <div class="header-container">
     <div>
         <h1 class="title">DGA & BOFI - Mars 2020</h1>
+        <h6 class="title"><a href="global.html">Domains view</a></h6>
     </div>
 </div>
 <div class="legend">
